remove prefers color scheme dark

--- a/public/assets/screening-indonesia/css/style.css
+++ b/public/assets/screening-indonesia/css/style.css
@@ -15,7 +15,7 @@ body {
     box-sizing: border-box;
     }
 
-    @media (prefers-color-scheme: dark) {
+    /* @media (prefers-color-scheme: dark) { */
     html {
         color-scheme: dark;
     }
@@ -14213,4 +14213,4 @@ body {
       }
     
   /* end detail company css */
-}
+/* } */
