--- a/public/assets/screening-indonesia/css/style.css
+++ b/public/assets/screening-indonesia/css/style.css
@@ -1299,9 +1299,9 @@ body {
         padding-inline-start: 1rem;
         -webkit-padding-end: 1rem;
         padding-inline-end: 1rem;
-        padding: 0px;
+        padding: 10px;
         background-color: initial;
-        overflow: hidden;
+        /* overflow: hidden; */
       }
 
       .css-1twb9xo {
@@ -3024,8 +3024,8 @@ body {
         color: var(--chakra-colors-gray-800);
         border-color: var(--chakra-colors-white);
         vertical-align: top;
-        width: 80px;
-        height: 80px;
+        width: 130px;
+        height: 130px;
         font-size: calc(3rem / 2.5);
         -webkit-align-self: center;
         -ms-flex-item-align: center;
@@ -4210,9 +4210,9 @@ body {
         padding-inline-start: 1rem;
         -webkit-padding-end: 1rem;
         padding-inline-end: 1rem;
-        padding: 0px;
+        padding: 10px;
         background-color: initial;
-        overflow: hidden;
+        /* overflow: hidden; */
       }
     
     
@@ -4973,9 +4973,9 @@ body {
         padding-inline-start: 1rem;
         -webkit-padding-end: 1rem;
         padding-inline-end: 1rem;
-        padding: 0px;
+        padding: 10px;
         background-color: initial;
-        overflow: hidden;
+        /* overflow: hidden; */
       }
     
     
@@ -5552,9 +5552,9 @@ body {
     padding-inline-start: 1rem;
     -webkit-padding-end: 1rem;
     padding-inline-end: 1rem;
-    padding: 0px;
+    padding: 10px;
     background-color: initial;
-    overflow: hidden;
+    /* overflow: hidden; */
   }
 
 
@@ -6315,9 +6315,9 @@ body {
     padding-inline-start: 1rem;
     -webkit-padding-end: 1rem;
     padding-inline-end: 1rem;
-    padding: 0px;
+    padding: 10px;
     background-color: initial;
-    overflow: hidden;
+    /* overflow: hidden; */
   }
 
 
@@ -7284,9 +7284,9 @@ body {
     padding-inline-start: 1rem;
     -webkit-padding-end: 1rem;
     padding-inline-end: 1rem;
-    padding: 0px;
+    padding: 10px;
     background-color: initial;
-    overflow: hidden;
+    /* overflow: hidden; */
   }
 
 
@@ -8047,9 +8047,9 @@ body {
     padding-inline-start: 1rem;
     -webkit-padding-end: 1rem;
     padding-inline-end: 1rem;
-    padding: 0px;
+    padding: 10px;
     background-color: initial;
-    overflow: hidden;
+    /* overflow: hidden; */
   }
 
 
@@ -8821,9 +8821,9 @@ body {
         padding-inline-start: 1rem;
         -webkit-padding-end: 1rem;
         padding-inline-end: 1rem;
-        padding: 0px;
+        padding: 10px;
         background-color: initial;
-        overflow: hidden;
+        /* overflow: hidden; */
       }
     
     
@@ -9584,9 +9584,9 @@ body {
         padding-inline-start: 1rem;
         -webkit-padding-end: 1rem;
         padding-inline-end: 1rem;
-        padding: 0px;
+        padding: 10px;
         background-color: initial;
-        overflow: hidden;
+        /* overflow: hidden; */
       }
     
     
@@ -10296,9 +10296,9 @@ body {
         padding-inline-start: 1rem;
         -webkit-padding-end: 1rem;
         padding-inline-end: 1rem;
-        padding: 0px;
+        padding: 10px;
         background-color: initial;
-        overflow: hidden;
+        /* overflow: hidden; */
       }
     
     
@@ -11059,9 +11059,9 @@ body {
         padding-inline-start: 1rem;
         -webkit-padding-end: 1rem;
         padding-inline-end: 1rem;
-        padding: 0px;
+        padding: 10px;
         background-color: initial;
-        overflow: hidden;
+        /* overflow: hidden; */
       }
     
     
@@ -11706,9 +11706,9 @@ body {
         padding-inline-start: 1rem;
         -webkit-padding-end: 1rem;
         padding-inline-end: 1rem;
-        padding: 0px;
+        padding: 10px;
         background-color: initial;
-        overflow: hidden;
+        /* overflow: hidden; */
       }
     
     
@@ -13091,9 +13091,9 @@ body {
         padding-inline-start: 1rem;
         -webkit-padding-end: 1rem;
         padding-inline-end: 1rem;
-        padding: 0px;
+        padding: 10px;
         background-color: initial;
-        overflow: hidden;
+        /* overflow: hidden; */
       }
     
     
@@ -13770,9 +13770,9 @@ body {
         padding-inline-start: 1rem;
         -webkit-padding-end: 1rem;
         padding-inline-end: 1rem;
-        padding: 0px;
+        padding: 10px;
         background-color: initial;
-        overflow: hidden;
+        /* overflow: hidden; */
       }
     
     
