top ten update image penghargaan.png

--- a/public/assets/screening-indonesia/css/style.css
+++ b/public/assets/screening-indonesia/css/style.css
@@ -2775,7 +2775,7 @@ body {
         padding-inline-end: 1rem;
         padding: 0px;
         overflow: hidden;
-        background: var(--chakra-colors-gradient-second);
+        background: #3C4E83;
       }
     
     
@@ -5082,7 +5082,7 @@ body {
         padding-inline-end: 1rem;
         padding: 0px;
         overflow: hidden;
-        background: var(--chakra-colors-gradient-second);
+        background: #3C4E83;
       }
     
     
@@ -6550,7 +6550,7 @@ body {
     padding-inline-end: 1rem;
     padding: 0px;
     overflow: hidden;
-    background: var(--chakra-colors-gradient-second);
+    background: #3C4E83;
   }
 
 
@@ -8352,7 +8352,7 @@ body {
     padding-inline-end: 1rem;
     padding: 0px;
     overflow: hidden;
-    background: var(--chakra-colors-gradient-second);
+    background: #3C4E83;
   }
 
 
@@ -9827,7 +9827,7 @@ body {
         padding-inline-end: 1rem;
         padding: 0px;
         overflow: hidden;
-        background: var(--chakra-colors-gradient-second);
+        background: #3C4E83;
       }
     
     
@@ -11212,7 +11212,7 @@ body {
         padding-inline-end: 1rem;
         padding: 0px;
         overflow: hidden;
-        background: var(--chakra-colors-gradient-second);
+        background: #3C4E83;
       }
     
     
@@ -12656,7 +12656,7 @@ body {
         padding-inline-end: 1rem;
         padding: 0px;
         overflow: hidden;
-        background: var(--chakra-colors-gradient-second);
+        background: #3C4E83;
       }
     
     
@@ -14070,7 +14070,7 @@ body {
         padding-inline-end: 1rem;
         padding: 0px;
         overflow: hidden;
-        background: var(--chakra-colors-gradient-second);
+        background: #3C4E83;
       }
     
     
